update quick nav

--- a/layout/_partial/toc_action.ejs
+++ b/layout/_partial/toc_action.ejs
@@ -27,6 +27,7 @@
         toc.css('width',wid);
         $(window).resize(onResize);
         first = false;
+        toccopy.css('visibility', 'hidden');
       }
       
     }
