Add Swiftype Support

--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -23,4 +23,5 @@
 <% } %>
 
 <%- partial('header_act') %>
-<%- partial('to_top') %>
+<%- partial('extra/to_top') %>
+<%- partial('extra/swiftype_search') %>
