--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -1,6 +1,13 @@
 <div class="search">
-  <form action="//google.com/search" method="get" accept-charset="utf-8">
-    <input type="search" name="q" results="0" placeholder="<%= __('search') %>">
-    <input type="hidden" name="q" value="site:<%- config.url.replace(/^https?:\/\//, '') %>">
-  </form>
+  <% if (theme.swiftype_search.enable) { %>
+    <form>
+      <input id="<%- theme.swiftype_search.search_input_selector %>" type="search" placeholder="<%= __('search') %>">
+    </form>
+    <div id="st-results-container"></div>
+  <% } else { %>
+    <form action="//google.com/search" method="get" accept-charset="utf-8">
+      <input type="search" name="q" results="0" placeholder="<%= __('search') %>">
+      <input type="hidden" name="q" value="site:<%- config.url.replace(/^https?:\/\//, '') %>">
+    </form>
+  <% } %>
 </div>
