--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -36,12 +36,18 @@
       font-style italic
       font-size 1em
       padding 10px 15px
-      border 1px solid color-border
+      border 1px solid #363636
+      box-shadow 1px 2px 3px #ddd
       width 100%
       box-sizing border-box
       color color-meta
       &:focus
         color color-font
+    #st-results-container
+      background #fff
+      width 100%
+      box-sizing border-box
+      box-shadow 1px 2px 3px #ddd
 
   .tag
     small
