--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -1,3 +1,5 @@
 <% theme.widgets.forEach(function(widget){ %>
   <%- partial('../_widget/' + widget) %>
 <% }); %>
+
+<%- partial('extra/swiftype_search') %>
