新增阅读量显示

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -9,6 +9,9 @@
           <a href="<%- item.permalink %>#disqus_thread" class="comment-link"></a>
         </div>
       <% } %>
+      <div class="alignright">
+        <a id="/<%- item.path %>" class="pageviews"></a>
+      </div>
       <% if (item.layout != 'page'){ %>
         <div class="icon"></div>
         <time datetime="<%= item.date.toDate().toISOString() %>"><a href="<%- config.root %><%- item.path %>"><%= item.date.format(config.date_format) %></a></time>
@@ -48,4 +51,7 @@
 <%- partial('comment') %>
 <% if(!index && item.toc){ %>
   <%- partial('extra/toc_action') %>
+<% } %>
+<% if(!index){ %>
+  <%- partial('extra/articleviews', {path: '/' + item.path}) %>
 <% } %>
