--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -41,7 +41,7 @@
   <link rel="alternate" href="<% if (theme.rss){ %><%- theme.rss %><% } else { %><%- config.root %>atom.xml<% } %>" title="<%= config.title %>" type="application/atom+xml">
   <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="<%- config.root %>css/style.css" media="screen" type="text/css">
-  <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <%- partial('add_jquery') %>
+  
+  <%- partial('add_libs') %>
   <%- partial('google_analytics') %>
 </head>
