--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,7 +1,7 @@
 <div id="nav-top">
   <div class="alignleft main-title">
     <h1><%= config.title %></h1>
-    <h2><% if (config.subtitle && false){ %><%= config.subtitle %><% } %></h2>
+    <h2><% if (config.subtitle){ %><%= config.subtitle %><% } %></h2>
   </div>
   <nav id="main-nav" class="alignright">
     <ul>
