--- a/source/css/_partial/index.styl
+++ b/source/css/_partial/index.styl
@@ -2,7 +2,7 @@
   a
     display block
     padding 5px 10px
-    background color-border
+    background #fff
     color color-meta
     font-family font-title
     text-shadow 0 0 1px #fff
@@ -14,12 +14,14 @@
       text-shadow none
 
   .prev
+    box-shadow 3px 3px 5px #ddd
     &:before
       content '\f053'
       padding-right 10px
       font-family font-icon
 
   .next
+    box-shadow 3px 3px 5px #ddd
     &:after
       content '\f054'
       padding-left 10px
