--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -2,7 +2,7 @@ icon-size = 32px
 icon-gap = 25px
 
 article
-  box-shadow 1px 2px 3px #ddd
+  box-shadow 5px 5px 10px #ddd
   background #fff
   &.page
     padding-left 20px
@@ -135,8 +135,13 @@ article
           font 1.1em font-icon
           padding-right 10px
         &.comment-link
+          margin-left 15px
           &:before
             content '\f075'
+        &.pageviews
+          display none
+          &:before
+            content '\f06e'
 
   .entry
     text-align justify
