--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -26,12 +26,18 @@
       font-weight normal
       font-size 2.5em
       line-height 1
+      padding-bottom 10px
+      @media screen and (max-width: 600px)
+        padding-bottom 0
+        line-height normal
 
     h2
+      color #fff
       font-weight normal
-      font-size 0.9em
-      line-height 1
-      margin-top 10px
+      font-size 1em
+      display none
+      @media screen and (max-width: 600px)
+        display inline
 
     .main-title
       margin-left 25px
