--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -6,7 +6,7 @@
     width 100%
   .widget
     background #fff
-    box-shadow 1px 2px 3px #ddd
+    box-shadow 3px 3px 5px #ddd
     word-wrap break-word
     margin-bottom 30px
     .title
@@ -36,8 +36,8 @@
       font-style italic
       font-size 1em
       padding 10px 15px
-      border 1px solid #363636
-      box-shadow 1px 2px 3px #ddd
+      border 0px
+      box-shadow 3px 3px 5px #ddd
       width 100%
       box-sizing border-box
       color color-meta
